@@ -3,6 +3,9 @@ Tue Feb  2 10:29:09 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
 	* configure, configure.in: Rewrite getpeername_length_t detection
 	to use prototypes to eliminate type conversion.
 
+	* htsearch/Display.cc(buildMatchList): Ensure scores are always
+	positive or zero.
+	
 Mon Feb  1 22:54:02 1999  Hans-Peter Nilsson  <hp@axis.se>
 
 	* htdoc/attrs.html: Correct "default" for "nothing_found_file".
